syntax = "proto3";

// import "google/protobuf/timestamp.proto";

package manager_proto;

option go_package = "./manager";

service ManagerService {
  // rpc Health(HealthRequest) returns (HealthResponse) {}
  rpc Run(RunRequest) returns (RunResponse) {}
  rpc CreateDomain(CreateDomainRequest) returns (CreateDomainResponse) {}
}

// message HealthRequest {}
// message HealthResponse { string status = 1; }

message RunRequest { bytes computation = 1; }

message RunResponse { string ID = 1; }

message CreateDomainRequest {
  string pool = 1;
  string volume = 2;
  string domain = 3;
}

message CreateDomainResponse { string name = 1; }
